--- a/index.html
+++ b/index.html
@@ -10,10 +10,13 @@
 <body>
     <main>
         <section id="telefone">
-
+            <iframe src="home.html" name="tela" id="tela" frameborder="0"></iframe>
         </section>
-        <section id="redes-dociais">
-
+        <section id="redes-sociais">
+            <a href="home.html" target="tela"><img src="imagens/logo-home.jpg" alt=""> </a><br>
+            <a href="https://www.instagram.com/_paulorabeloo/" target="tela"> <img src="imagens/logo-instagram.jpg" alt=""></a><br>
+            <a href="https://www.facebook.com/kelly.luiza.946" target="tela"><img src="imagens/logo-facebook.jpg" alt=""></a><br>
+            <a href="https://github.com/PauloHenriqueResende"  target="tela"> <img  src="imagens/logo-github.jpg" alt=""> </a><br>
 
         </section>
 
