--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projeto Redes Sociais</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="socialstyle.css">
 </head>
 <body>
     <main>
@@ -14,9 +14,9 @@
         </section>
         <section id="redes-sociais">
             <a href="home.html" target="tela"><img src="imagens/logo-home.jpg" alt=""> </a><br>
-            <a href="https://www.instagram.com/_paulorabeloo/" target="tela"> <img src="imagens/logo-instagram.jpg" alt=""></a><br>
-            <a href="https://www.facebook.com/kelly.luiza.946" target="tela"><img src="imagens/logo-facebook.jpg" alt=""></a><br>
-            <a href="https://github.com/PauloHenriqueResende"  target="tela"> <img  src="imagens/logo-github.jpg" alt=""> </a><br>
+            <a href="instagram.html" target="tela"> <img src="imagens/logo-instagram.jpg" alt=""></a><br>
+            <a href="facebook.html" target="tela"><img src="imagens/logo-facebook.jpg" alt=""></a><br>
+            <a href="github.html"  target="tela"> <img  src="imagens/logo-github.jpg" alt=""> </a><br>
 
         </section>
 
