--- a/facebook.html
+++ b/facebook.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>instagram</title>
-   <link rel="stylesheet" href="socialstyle.css">
+    <title>Document</title>
+    <link rel="stylesheet" href="socialstyle.css">
 </head>
 <body>
-    <img src="imagens/tela-instagram.jpg" alt="">
-    <a href="https://www.instagram.com/cursoemvideo" target="_blank">acesse</a>
+    <img src="imagens/tela-facebook.jpg" alt="">
+    <a href="https://www.facebook.com/gustavoguanabara" target="_blank">Acesse</a>
 </body>
 </html>
